--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Docker Login
+        uses: docker/login-action@v1.9.0
+        with:
+          # Server address of Docker registry
+          # registry: optional
 
-      # Runs a single command using the runners shell
+          # Username used to log again
+          username: $({secrets.DOCKERHUB_USER})
+          # Password or personal acess
+          password: $({secrets.DOCKERHUB_PWD})
+          # Log out from the Docker Registe
+          #logout: optional , default
+
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.4.0
         with:
