--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,11 @@ jobs:
           # registry: optional
 
           # Username used to log again
-          username: $({secrets.DOCKERHUB_USER})
+          username: gomesdocker
+          #$({secrets.DOCKERHUB_USER})
           # Password or personal acess
-          password: $({secrets.DOCKERHUB_PWD})
+          password: idec29
+          #$({secrets.DOCKERHUB_PWD})
           # Log out from the Docker Registe
           #logout: optional , default
 
