--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,6 @@ jobs:
           file: ./src/Dockerfile
           push: true
           tags:
-            gomesdocker/api-bootcamp-produto:latest 
-            gomesdocker/api-bootcamp-produto:v1
+            gomesdocker/api-bootcamp-produto:latest
+            gomesdocker/api-bootcamp-produto:${{github.run_number}}
             
