--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,30 @@ jobs:
             gomesdocker/api-bootcamp-produto:latest
             gomesdocker/api-bootcamp-produto:${{github.run_number}}
             
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Kubernetes set context
+        uses: Azure/k8s-set-context@v1
+        with:
+          # Acceptable values: kubeconfig or service-account
+          method: kubeconfig
+          # Kubernetes Config
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+          
+      - name: Deploy MongoDB
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          manifests: |
+            k8s/mongodb/deployment.yaml
+            k8s/mongodb/service.yaml
+            
+      - name: Deploy WebApi
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          images: gomesconsultor/bootcamp-8ks-product:${{github.run_number}}
+          manifests: |
+            k8s/api/deployment.yaml 
