--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
             gomesdocker/api-bootcamp-produto:${{github.run_number}}
             
   CD:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [CI]
     steps:
       - uses: actions/checkout@v2
